--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -7,7 +7,7 @@
   fxLayoutGap.xs="0"
   >
   <div fxFlex="40">
-    <md-card *ngIf="dish" [@visibility]="visibility">
+    <md-card *ngIf="dish" [@visibility]="visibility" [@expand]>
       <md-card-header>
         <md-card-title>
           <h3>{{dish.name | uppercase}}</h3>
@@ -29,7 +29,7 @@
     </md-card>
   </div>
   <div fxFlex="40">
-    <md-card *ngIf="dish" [@visibility]="visibility">
+    <md-card *ngIf="dish" [@visibility]="visibility" [@expand]>
       <md-card-header>
         <md-card-title>
           <h3>Comments</h3>
